<resources>
    <string name="app_name">AllPC</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="input_email">Email</string>
    <string name="prompt_email2">Email</string>
    <string name="prompt_email3">Email</string>
    <string name="prompt_email4">Email</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- OPCIONES MENU -->
    <string name="menu_login">Login</string>
    <string name="menu_comparador">Comparador</string>
    <string name="menu_crearPC">Crear PC</string>
    <string name="menu_logout">Cerrar Sesion</string>
    <string name="menu_order_asc">Ordenar A-Z</string>
    <string name="menu_order_desc">Ordenar Z-A</string>

    <!-- OPCIONES MENU CONTEXTUAL -->
    <string name="menu_ver">Ver PC</string>
    <string name="menu_editar">Editar PC</string>
    <string name="menu_borrar">Borrar PC</string>
    <string name="menu_compare">Anyadir al comparador</string>
</resources>
